feat: added game_end div to show score and restart

--- a/index.html
+++ b/index.html
@@ -55,20 +55,23 @@
         <div id="game_rules">
           <h2>Welcome to Tetra Kids: Block Party!</h2>
           <br />
-          <h4>Game Objective:</h4><br>
+          <h4>Game Objective:</h4>
+          <br />
           <p>
             Blocks will fall down on your screen when the game starts. Try to
-            fill up rows by moving blocks on the grid.<br> <img
-            src="./assets/images/row.png" / alt="image showing how a row can be
-            filled with a block"><br> Score as many points as you can before the
-            blocks can no longer move.<br>
+            fill up rows by moving blocks on the grid.<br />
+            <img src="./assets/images/row.png" / alt="image showing how a row
+            can be filled with a block"><br />
+            Score as many points as you can before the blocks can no longer
+            move.<br />
             <img
               src="./assets/images/topgrid.png"
               alt="image showing a block that can no longer move down"
-            /><br>
+            /><br />
           </p>
-          <br>
-          <h4>Game Controls:</h4><br>
+          <br />
+          <h4>Game Controls:</h4>
+          <br />
           <p class="controls-keyboard">
             You can move the blocks left and right using the arrow keys on your
             keyboard or by clicking the left and right buttons on your
@@ -80,17 +83,20 @@
             <img
               src="./assets/images/rightArrow.png"
               alt="image of right arrow button"
-            /><br>
-            You can also rotate blocks by using the up arrow on your keyboard
-            or by clicking the flip button on your screen: <br>
-            <img src="./assets/images/flipBtn.png" alt="image of flip button" /><br>
+            /><br />
+            You can also rotate blocks by using the up arrow on your keyboard or
+            by clicking the flip button on your screen: <br />
+            <img
+              src="./assets/images/flipBtn.png"
+              alt="image of flip button"
+            /><br />
             If you're feeling brave, you can drop blocks down the grid faster by
             using the down arrow on your keyboard or by clicking the drop button
-            on your screen:<br>
+            on your screen:<br />
             <img
               src="./assets/images/downArrow.png"
               alt="image of the drop button"
-            /><br>
+            /><br />
             Click the start button to begin!
           </p>
           <p class="controls-mobile">
@@ -103,16 +109,19 @@
             <img
               src="./assets/images/rightArrow.png"
               alt="image of right arrow"
-            /><br>
+            /><br />
             You can also rotate blocks by tapping the flip button on your
-            screen:<br>
-            <img src="./assets/images/flipBtn.png" alt="image of flip button" /><br>
+            screen:<br />
+            <img
+              src="./assets/images/flipBtn.png"
+              alt="image of flip button"
+            /><br />
             If you're feeling brave, you can drop blocks down the grid faster
-            tapping the drop button on your screen:<br>
+            tapping the drop button on your screen:<br />
             <img
               src="./assets/images/downArrow.png"
               alt="image of the drop button"
-            /><br>
+            /><br />
             Click the start button to begin!
           </p>
 
@@ -121,6 +130,17 @@
             ><img src="./assets/images/startBtn.png" alt="Start Button"
           /></a>
         </div>
+
+        <div id="game_end">
+          <h2>Well done!</h2>
+          <p>Your Final Score: <span id="final_score"></span></p>
+          <img
+            id="play_again"
+            src="playAgainBtn.png"
+            alt="button to refresh page and play again"
+          />
+        </div>
+
         <!-- Grid for 288 blocks -->
         <div class="grid">
           <div></div>
