feat: added h1 title for screenreaders

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       </noscript>
 
       <section>
+        <h1>Tetra Kids: Block Party</h1>
         <!-- Score -->
         <h2>SCORE: <span id="score">0</span></h2>
         <!-- Container for game rules and start button -->
