doc: name changes to images

--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png"
+      href="./assets/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/favicon/favicon-32x32.png"
+      href="./assets/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"
+      href="./assets/favicon/favicon-16x16.png"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <main>
@@ -76,24 +76,24 @@
             keyboard or by clicking the left and right buttons on your
             screen:<br />
             <img
-              src="./assets/images/leftArrow.png"
+              src="./assets/images/left-arrow.png"
               alt="image of left arrow button"
             />
             <img
-              src="./assets/images/rightArrow.png"
+              src="./assets/images/right-arrow.png"
               alt="image of right arrow button"
             /><br />
             You can also rotate blocks by using the up arrow on your keyboard or
             by clicking the flip button on your screen: <br />
             <img
-              src="./assets/images/flipBtn.png"
+              src="./assets/images/flip-btn.png"
               alt="image of flip button"
             /><br />
             If you're feeling brave, you can drop blocks down the grid faster by
             using the down arrow on your keyboard or by clicking the drop button
             on your screen:<br />
             <img
-              src="./assets/images/downArrow.png"
+              src="./assets/images/down-arrow.png"
               alt="image of the drop button"
             /><br />
             Click the start button to begin!
@@ -102,23 +102,23 @@
             You can move the blocks left and right by tapping the left and right
             buttons on your screen:<br />
             <img
-              src="./assets/images/leftArrow.png"
+              src="./assets/images/left-arrow.png"
               alt="image of left arrow"
             />
             <img
-              src="./assets/images/rightArrow.png"
+              src="./assets/images/right-arrow.png"
               alt="image of right arrow"
             /><br />
             You can also rotate blocks by tapping the flip button on your
             screen:<br />
             <img
-              src="./assets/images/flipBtn.png"
+              src="./assets/images/flip-btn.png"
               alt="image of flip button"
             /><br />
             If you're feeling brave, you can drop blocks down the grid faster
             tapping the drop button on your screen:<br />
             <img
-              src="./assets/images/downArrow.png"
+              src="./assets/images/down-arrow.png"
               alt="image of the drop button"
             /><br />
             Click the start button to begin!
@@ -126,7 +126,7 @@
 
           <!-- Start Button -->
           <a id="start_btn"
-            ><img src="./assets/images/startBtn.png" alt="Start Button"
+            ><img src="./assets/images/start-btn.png" alt="Start Button"
           /></a>
         </div>
         <!-- Div that displays the end of game message along with final score and play again button -->
@@ -135,7 +135,7 @@
           <p>Your Final Score: <span id="final_score"></span></p>
           <img
             id="play_again"
-            src="./assets/images/playAgainBtn.png"
+            src="./assets/images/play-again-btn.png"
             alt="button to refresh page and play again"
           />
         </div>
@@ -447,24 +447,24 @@
         <!-- container for left, flip and right button controls -->
         <div class="flex-center">
           <a id="move_left">
-            <img src="./assets/images/leftArrow.png" alt="Move left button"
+            <img src="./assets/images/left-arrow.png" alt="Move left button"
           /></a>
           <a id="flip_shape"
-            ><img src="./assets/images/flipBtn.png" alt="Flip shape button"
+            ><img src="./assets/images/flip-btn.png" alt="Flip shape button"
           /></a>
           <a id="move_right"
-            ><img src="./assets/images/rightArrow.png" alt="Move right button"
+            ><img src="./assets/images/right-arrow.png" alt="Move right button"
           /></a>
         </div>
         <!-- container for the drop block control -->
         <div class="flex-center">
           <a id="drop_shape"
-            ><img src="./assets/images/downArrow.png" alt="Move down button"
+            ><img src="./assets/images/down-arrow.png" alt="Move down button"
           /></a>
         </div>
       </section>
     </main>
     <!-- Script file -->
-    <script src="assets/javascript/script.js"></script>
+    <script src="./assets/javascript/script.js"></script>
   </body>
 </html>
