doc: updated image file formats to webp

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./assets/favicon/apple-touch-icon.png"
+      href="./assets/favicon/apple-touch-icon.webp"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/favicon/favicon-32x32.png"
+      href="./assets/favicon/favicon-32x32.webp"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./assets/favicon/favicon-16x16.png"
+      href="./assets/favicon/favicon-16x16.webp"
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
@@ -59,12 +59,12 @@
           <p>
             Blocks will fall down on your screen when the game starts. Try to
             fill up rows by moving blocks on the grid.<br />
-            <img src="./assets/images/row.png" / alt="image showing how a row
+            <img src="./assets/images/row.webp" / alt="image showing how a row
             can be filled with a block"><br />
             Score as many points as you can before the blocks can no longer
             move.<br />
             <img
-              src="./assets/images/topgrid.png"
+              src="./assets/images/topgrid.webp"
               alt="image showing a block that can no longer move down"
             /><br />
           </p>
@@ -76,24 +76,24 @@
             keyboard or by clicking the left and right buttons on your
             screen:<br />
             <img
-              src="./assets/images/left-arrow.png"
+              src="./assets/images/left-arrow.webp"
               alt="image of left arrow button"
             />
             <img
-              src="./assets/images/right-arrow.png"
+              src="./assets/images/right-arrow.webp"
               alt="image of right arrow button"
             /><br />
             You can also rotate blocks by using the up arrow on your keyboard or
             by clicking the flip button on your screen: <br />
             <img
-              src="./assets/images/flip-btn.png"
+              src="./assets/images/flip-btn.webp"
               alt="image of flip button"
             /><br />
             If you're feeling brave, you can drop blocks down the grid faster by
             using the down arrow on your keyboard or by clicking the drop button
             on your screen:<br />
             <img
-              src="./assets/images/down-arrow.png"
+              src="./assets/images/down-arrow.webp"
               alt="image of the drop button"
             /><br />
             Click the start button to begin!
@@ -102,23 +102,23 @@
             You can move the blocks left and right by tapping the left and right
             buttons on your screen:<br />
             <img
-              src="./assets/images/left-arrow.png"
+              src="./assets/images/left-arrow.webp"
               alt="image of left arrow"
             />
             <img
-              src="./assets/images/right-arrow.png"
+              src="./assets/images/right-arrow.webp"
               alt="image of right arrow"
             /><br />
             You can also rotate blocks by tapping the flip button on your
             screen:<br />
             <img
-              src="./assets/images/flip-btn.png"
+              src="./assets/images/flip-btn.webp"
               alt="image of flip button"
             /><br />
             If you're feeling brave, you can drop blocks down the grid faster
             tapping the drop button on your screen:<br />
             <img
-              src="./assets/images/down-arrow.png"
+              src="./assets/images/down-arrow.webp"
               alt="image of the drop button"
             /><br />
             Click the start button to begin!
@@ -126,7 +126,7 @@
 
           <!-- Start Button -->
           <a id="start_btn"
-            ><img src="./assets/images/start-btn.png" alt="Start Button"
+            ><img src="./assets/images/start-btn.webp" alt="Start Button"
           /></a>
         </div>
         <!-- Div that displays the end of game message along with final score and play again button -->
@@ -135,7 +135,7 @@
           <p>Your Final Score: <span id="final_score"></span></p>
           <img
             id="play_again"
-            src="./assets/images/play-again-btn.png"
+            src="./assets/images/play-again-btn.webp"
             alt="button to refresh page and play again"
           />
         </div>
@@ -447,19 +447,19 @@
         <!-- container for left, flip and right button controls -->
         <div class="flex-center">
           <a id="move_left">
-            <img src="./assets/images/left-arrow.png" alt="Move left button"
+            <img src="./assets/images/left-arrow.webp" alt="Move left button"
           /></a>
           <a id="flip_shape"
-            ><img src="./assets/images/flip-btn.png" alt="Flip shape button"
+            ><img src="./assets/images/flip-btn.webp" alt="Flip shape button"
           /></a>
           <a id="move_right"
-            ><img src="./assets/images/right-arrow.png" alt="Move right button"
+            ><img src="./assets/images/right-arrow.webp" alt="Move right button"
           /></a>
         </div>
         <!-- container for the drop block control -->
         <div class="flex-center">
           <a id="drop_shape"
-            ><img src="./assets/images/down-arrow.png" alt="Move down button"
+            ><img src="./assets/images/down-arrow.webp" alt="Move down button"
           /></a>
         </div>
       </section>
