fix: removed trailing slashes

--- a/404.html
+++ b/404.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Uh Oh!</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" >
   </head>
   <body>
     <div id="uh_oh">
       <h2>Looks like you got lost!</h2>
-      <br />
-      <br />
+      <br >
+      <br >
       <p>
         Click <a href="index.html" alt="Link to the index page">HERE</a> if you
         would like to play our game!
