--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <!-- Meta Tags for search engines -->
     <meta
       name="description"
       content="Tetra Kids: Block Party, a fun engaging game inspired by the classic game of Tetris."
-    />
+    >
     <meta
       name="keywords"
       content="Tetra Kids, Games for kids, kid's game, block game"
-    />
+    >
     <!-- Title -->
     <title>Tetra Kids: Block Party</title>
     <!-- Favicon -->
@@ -20,28 +20,28 @@
       rel="apple-touch-icon"
       sizes="180x180"
       href="./assets/favicon/apple-touch-icon.webp"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/favicon/favicon-32x32.webp"
-    />
+    >
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="./assets/favicon/favicon-16x16.webp"
-    />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    >
+    <link rel="stylesheet" href="./assets/css/style.css" >
   </head>
   <body>
     <main>
       <!-- shows message if javascript is disabled -->
       <noscript>
         <div class="no-script-div">
-          Uh Oh!<br /><br />
-          It looks like you've got JavaScript disabled on your browser.<br />
+          Uh Oh!<br ><br >
+          It looks like you've got JavaScript disabled on your browser.<br >
           You will need to turn it back on if you would like to play this game!
         </div>
       </noscript>
@@ -53,81 +53,81 @@
         <!-- Container for game rules and start button -->
         <div id="game_rules">
           <h2>Welcome to Tetra Kids: Block Party!</h2>
-          <br />
+          <br >
           <h3>Game Objective:</h3>
-          <br />
+          <br >
           <p>
             Blocks will fall down on your screen when the game starts. Try to
-            fill up rows by moving blocks on the grid.<br />
+            fill up rows by moving blocks on the grid.<br >
             <img src="./assets/images/row.webp" / alt="image showing how a row
-            can be filled with a block"><br />
+            can be filled with a block"><br >
             Score as many points as you can before the blocks can no longer
-            move.<br />
+            move.<br >
             <img
               src="./assets/images/topgrid.webp"
               alt="image showing a block that can no longer move down"
-            /><br />
+            ><br >
           </p>
-          <br />
+          <br >
           <h3>Game Controls:</h3>
-          <br />
+          <br >
           <p class="controls-keyboard">
             You can move the blocks left and right using the arrow keys on your
             keyboard or by clicking the left and right buttons on your
-            screen:<br />
+            screen:<br >
             <img
               src="./assets/images/left-arrow.webp"
               alt="image of left arrow button"
-            />
+            >
             <img
               src="./assets/images/right-arrow.webp"
               alt="image of right arrow button"
-            /><br />
+            ><br >
             You can also rotate blocks by using the up arrow on your keyboard or
-            by clicking the flip button on your screen: <br />
+            by clicking the flip button on your screen: <br >
             <img
               src="./assets/images/flip-btn.webp"
               alt="image of flip button"
-            /><br />
+            ><br >
             If you're feeling brave, you can drop blocks down the grid faster by
             using the down arrow on your keyboard or by clicking the drop button
-            on your screen:<br />
+            on your screen:<br >
             <img
               src="./assets/images/down-arrow.webp"
               alt="image of the drop button"
-            /><br />
+            ><br >
             Click the start button to begin!
           </p>
           <p class="controls-mobile">
             You can move the blocks left and right by tapping the left and right
-            buttons on your screen:<br />
+            buttons on your screen:<br >
             <img
               src="./assets/images/left-arrow.webp"
               alt="image of left arrow"
-            />
+            >
             <img
               src="./assets/images/right-arrow.webp"
               alt="image of right arrow"
-            /><br />
+            ><br >
             You can also rotate blocks by tapping the flip button on your
-            screen:<br />
+            screen:<br >
             <img
               src="./assets/images/flip-btn.webp"
               alt="image of flip button"
-            /><br />
+            ><br >
             If you're feeling brave, you can drop blocks down the grid faster
-            tapping the drop button on your screen:<br />
+            tapping the drop button on your screen:<br >
             <img
               src="./assets/images/down-arrow.webp"
               alt="image of the drop button"
-            /><br />
+            ><br >
             Click the start button to begin!
           </p>
 
           <!-- Start Button -->
           <a id="start_btn"
             ><img src="./assets/images/start-btn.webp" alt="Start Button"
-          /></a>
+          ></a>
         </div>
         <!-- Div that displays the end of game message along with final score and play again button -->
         <div id="game_end">
@@ -137,7 +137,7 @@
             id="play_again"
             src="./assets/images/play-again-btn.webp"
             alt="button to refresh page and play again"
-          />
+          >
         </div>
 
         <!-- Grid for 288 blocks (24 rows of 12 squares) -->
@@ -448,19 +448,19 @@
         <div class="flex-center">
           <a id="move_left">
             <img src="./assets/images/left-arrow.webp" alt="Move left button"
-          /></a>
+          ></a>
           <a id="flip_shape"
             ><img src="./assets/images/flip-btn.webp" alt="Flip shape button"
-          /></a>
+          ></a>
           <a id="move_right"
             ><img src="./assets/images/right-arrow.webp" alt="Move right button"
-          /></a>
+          ></a>
         </div>
         <!-- container for the drop block control -->
         <div class="flex-center">
           <a id="drop_shape"
             ><img src="./assets/images/down-arrow.webp" alt="Move down button"
-          /></a>
+          ></a>
         </div>
       </section>
     </main>
