fix: removed rogue slash

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <p>
             Blocks will fall down on your screen when the game starts. Try to
             fill up rows by moving blocks on the grid.<br >
-            <img src="./assets/images/row.webp" / alt="image showing how a row
+            <img src="./assets/images/row.webp" alt="image showing how a row
             can be filled with a block"><br >
             Score as many points as you can before the blocks can no longer
             move.<br >
